Get application with given name

--- a/appsettings.json
+++ b/appsettings.json
@@ -3,6 +3,7 @@
       "clientId": "73854e94-8f3f-4ad8-8659-6718f260c752",
       "tenantId": "62f58951-d420-4e59-8d89-ad924510e70c",
       "microsoftAppTenantId": "f8cdef31-a31e-4b4a-93e4-5f571e91255a",
+      "AppDisplayName": "Azure Static Web Apps",
       "graphUserScopes": [
         "user.read",
         "application.read.all"
