--- a/appsettings.json
+++ b/appsettings.json
@@ -6,7 +6,8 @@
       "AppDisplayName": "Azure Static Web Apps",
       "graphUserScopes": [
         "user.read",
-        "application.read.all"
+        "application.read.all",
+        "auditlog.read.all"
       ]
     }
   }
